# lampd

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  distro.rs  install.rs  lib.rs  managed_services.rs  stream.rs  systemd.rs
src/components/dashboard/: Dashboard.tsx  PhpVersionSwitcher.tsx  ServiceCard.tsx  ServiceStatusBadge.tsx
src/components/install/: InstallModal.tsx  PhpInstallVersionModal.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
src/lib/: tauri.ts  types.ts
src/store/: useLogStore.ts  usePhpVersionStore.ts  useServiceStore.ts
src/styles/: globals.css
