[package]
name = "lampd"
version = "0.1.0"
description = "Lightweight local development service control panel"
authors = ["Wildan"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["process", "sync", "macros", "io-util", "rt-multi-thread", "time", "net"] }
